# funfriend-rust

./: Cargo.toml  README.md  rustfmt.toml
src/: buddy.rs  buddy_context.rs  buddy_renderer.rs  chatter_context.rs  config.rs  config_manager.rs  ease.rs  font_manager.rs  glfn.rs  logger.rs  main.rs  text_renderer.rs  texture.rs  vec2.rs  window.rs
src/buddy/: chatter.rs  context.rs  mod.rs  renderer.rs
src/buddy/buddies/: funfriend.rs  mod.rs
src/glsl/: bake_alpha.frag  basic_fragment.frag  funfriend.frag  nop.frag  nop.vert
src/graphics/: dialog.rs  mod.rs  text.rs
src/graphics/render/: buddy.rs  mod.rs  text.rs
