[package]
name = "funfriend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.39"
gl = "0.14.0"
glfw = "0.59.0"
image = "0.25.5"
ini = "1.3.0"
nalgebra = "0.33.2"
rand = "0.8.5"
serde_json = "1.0.137"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winit = "0.30.8"
serde = { version = "1.0.217", features = ["derive"] }
lazy_static = "1.5.0"
once_cell = "1.20.2"
